concord_macros/tests/trybuild/fail/route/base_url_rejects_backslash.rs
use concord_macros::api;

api! {
    client BackslashBaseApi {
        base "https://example.com\\evil"
    }
}

api! {
    client BackslashSchemeApi {
        base "https:\\\\example.com"
    }
}

fn main() {}
